--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
+    "start": "nodemon server.js",
     "sync-db": "node scripts/syncDb.js",
     "dev": "nodemon server.js"
   }
