--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   },
   "scripts": {
     "start": "nodemon server.js",
     "sync-db": "node scripts/syncDb.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "format": "prettier --write '**/*.{js,json,md}'"
   }
 }
